# ros-is-ros2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  README.md  debug_completion.sh  project_plan.md  pyproject.toml  requirements-dev.txt  test_completion_final.sh  test_completion_final_clean.sh  test_completion_manual.sh
docs/: index.md
note/: rostopic_note.md
scripts/: enable_completion.sh  rostopic_completion.bash
src/ros_is_ros2/: __init__.py  __main__.py  cli.py  completion.py  detectors.py  discovery.py  exec.py  generic_tool.py  launch_completion_helper.py  main.py  mappings.py
src/ros_is_ros2/shims/: bash.sh  zsh.sh
src/ros_is_ros2/tools/: __init__.py  rosbag.py  roscore.py  roslaunch.py  rosmsg.py  rosnode.py  rosparam.py  rosrun.py  rosservice.py  rossrv.py  rostopic.py
tests/: __init__.py
tests/integration/: __init__.py  test_shell_integration.py
tests/unit/: __init__.py  test_cli.py  test_completion.py  test_launch_completion.py  test_main.py  test_mappings.py
